--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+	<!-- header section -->
 	<header>
 		<nav>
 			<h3 class="nav-title">G3 Architects</h3>
@@ -31,7 +32,24 @@
 			<img src="./images/banner.png" alt="banner-img">
 		</div>
 	</header>
-	<main></main>
+	<main>
+		<!-- team section -->
+		<section>
+			<div class="team-container">
+				<div class="team-img-container">
+					<img src="./images/team1.png" alt="">
+					<img src="./images/team2.png" alt="">
+					<img src="./images/team3.png" alt="">
+					<img src="./images/team4.png" alt="">
+				</div>
+				<div class="team-content">
+					<h3 class="team-title"><span class="quick-list">Quick list</span><span class="of-our"> of Our</span><span class="features"> Features</span></h3>
+					<p class="team-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+					<button class="primary-btn">Explore More</button>
+				</div>
+			</div>
+		</section>
+	</main>
 	<footer></footer>
 </body>
 
