--- a/index.html
+++ b/index.html
@@ -37,14 +37,17 @@
 		<section>
 			<div class="team-container">
 				<div class="team-img-container">
-					<img src="./images/team1.png" alt="">
-					<img src="./images/team2.png" alt="">
-					<img src="./images/team3.png" alt="">
-					<img src="./images/team4.png" alt="">
+					<img class="img" src="./images/team1.png" alt="">
+					<img class="img" src="./images/team2.png" alt="">
+					<img class="img" src="./images/team3.png" alt="">
+					<img class="img" src="./images/team4.png" alt="">
 				</div>
 				<div class="team-content">
-					<h3 class="team-title"><span class="quick-list">Quick list</span><span class="of-our"> of Our</span><span class="features"> Features</span></h3>
-					<p class="team-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+					<h3 class="team-title"><span class="quick-list">Quick list</span><span class="of-our"> of
+							Our</span><span class="features"> Features</span></h3>
+					<p class="team-description">There are many variations of passages of Lorem Ipsum available, but the
+						majority have suffered alteration in some form, by injected humour, or randomised words which
+						don't look even</p>
 					<button class="primary-btn">Explore More</button>
 				</div>
 			</div>
