--- a/index.html
+++ b/index.html
@@ -45,10 +45,41 @@
 				<div class="team-content">
 					<h3 class="team-title"><span class="quick-list">Quick list</span><span class="of-our"> of
 							Our</span><span class="features"> Features</span></h3>
-					<p class="team-description">There are many variations of passages of Lorem Ipsum available, but the
+					<p class="team-description">There are many variations of passages of Lorem Ipsum available, but
+						the
 						majority have suffered alteration in some form, by injected humour, or randomised words which
 						don't look even</p>
 					<button class="primary-btn">Explore More</button>
+				</div>
+			</div>
+		</section>
+		<!-- Facts section -->
+		<section>
+			<div class="facts">
+				<h3>Some Facts</h3>
+				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+					alteration.</p>
+			</div>
+			<div class="facts-card-container">
+				<div class="card">
+					<img src="images/icons/ribon.png" alt="">
+					<div class="card-states">54</div>
+					<p class="card-title">Awards Winnings</p>
+				</div>
+				<div class="card">
+					<img src="images/icons/projects.png" alt="">
+					<div class="card-states">1458</div>
+					<p class="card-title">Project Finished</p>
+				</div>
+				<div class="card">
+					<img src="images/icons/customers.png" alt="">
+					<div class="card-states">590</div>
+					<p class="card-title">Clients Worked</p>
+				</div>
+				<div class="card">
+					<img src="images/icons/email.png" alt="">
+					<div class="card-states">22578</div>
+					<p class="card-title">Email Send</p>
 				</div>
 			</div>
 		</section>
