--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
 		<!-- Facts section -->
 		<section>
 			<div class="facts">
-				<h3>Some Facts</h3>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+				<h3 class="facts-title">Some Facts</h3>
+				<p class="facts-description">There are many variations of passages of Lorem Ipsum available, but the
+					majority have suffered
 					alteration.</p>
 			</div>
 			<div class="facts-card-container">
@@ -82,6 +83,19 @@
 					<p class="card-title">Email Send</p>
 				</div>
 			</div>
+		</section>
+		<!-- sponsor section -->
+		<section class="sponsors">
+			<h3 class="sponsors-title">Our Sponspors</h3>
+			<p class="sponsors-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+				alteration.</p>
+				<div class="sponsors-img-container">
+					<img src="images/sponsors/spotify.png" alt="">
+					<img src="images/sponsors/amazon.png" alt="">
+					<img src="images/sponsors/google.png" alt="">
+					<img src="images/sponsors/telerama.png" alt="">
+					<img src="images/sponsors/figma.png" alt="">
+				</div>
 		</section>
 	</main>
 	<footer></footer>
