features section added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<div class="banner-content">
 				<h1 class="banner-title">Brand New Group of Architects</h1>
 				<p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the
-					majority have suffered alteration in some form, by injected humour, or randomised words which don't
+					majority have suffered alteration in some form, by injected humour, or randomized words which don't
 					look even</p>
 				<button class="primary-btn">Explore More</button>
 			</div>
@@ -47,9 +47,49 @@
 							Our</span><span class="features"> Features</span></h3>
 					<p class="team-description">There are many variations of passages of Lorem Ipsum available, but
 						the
-						majority have suffered alteration in some form, by injected humour, or randomised words which
+						majority have suffered alteration in some form, by injected humour, or randomized words which
 						don't look even</p>
 					<button class="primary-btn">Explore More</button>
+				</div>
+			</div>
+		</section>
+		<!-- features section -->
+		<section class="features">
+			<div class="features-content">
+				<h3 class="features-title">Features you will love & enjoy</h3>
+				<p class="features-description">There are many variations of passages of Lorem Ipsum available, but the
+					majority have suffered alteration in some form, by injected humour, or randomized words which don't
+					look even</p>
+				<div class="featured-card">
+					<h5 class="featured-card-title">Desktop & Mobile Version</h5>
+					<p class="featured-card-descrption">There are many variations of passages of Lorem Ipsum available,
+						but the majority have suffered
+						alteration in some form, by injected humour, or randomised...........</p>
+				</div>
+				<div class="featured-card">
+					<h5 class="featured-card-title">Desktop & Mobile Version</h5>
+					<p class="featured-card-descrption">There are many variations of passages of Lorem Ipsum available,
+						but the majority have suffered
+						alteration in some form, by injected humour, or randomised...........</p>
+				</div>
+				<div class="featured-card">
+					<h5 class="featured-card-title">Desktop & Mobile Version</h5>
+					<p class="featured-card-descrption">There are many variations of passages of Lorem Ipsum available,
+						but the majority have suffered
+						alteration in some form, by injected humour, or randomised...........</p>
+				</div>
+				<div class="featured-card">
+					<h5 class="featured-card-title">Desktop & Mobile Version</h5>
+					<p class="featured-card-description">There are many variations of passages of Lorem Ipsum available,
+						but the majority have suffered
+						alteration in some form, by injected humour, or randomised...........</p>
+				</div>
+			</div>
+			<div class="features-img">
+				<img src="images/architect.png" alt="">
+				<div class="ten-years-badge">
+					<h2 class="badge-title">10+Year</h2>
+					<p class="badge-description">Experience</p>
 				</div>
 			</div>
 		</section>
@@ -87,15 +127,16 @@
 		<!-- sponsor section -->
 		<section class="sponsors">
 			<h3 class="sponsors-title">Our Sponspors</h3>
-			<p class="sponsors-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+			<p class="sponsors-description">There are many variations of passages of Lorem Ipsum available, but the
+				majority have suffered
 				alteration.</p>
-				<div class="sponsors-img-container">
-					<img src="images/sponsors/spotify.png" alt="">
-					<img src="images/sponsors/amazon.png" alt="">
-					<img src="images/sponsors/google.png" alt="">
-					<img src="images/sponsors/telerama.png" alt="">
-					<img src="images/sponsors/figma.png" alt="">
-				</div>
+			<div class="sponsors-img-container">
+				<img src="images/sponsors/spotify.png" alt="">
+				<img src="images/sponsors/amazon.png" alt="">
+				<img src="images/sponsors/google.png" alt="">
+				<img src="images/sponsors/telerama.png" alt="">
+				<img src="images/sponsors/figma.png" alt="">
+			</div>
 		</section>
 	</main>
 	<footer></footer>
